--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-baseurl: /starter
+baseurl: /istanbul
 permalink: pretty
 future: true
 markdown: kramdown
 paginate: 5
-repo: starter
+repo: istanbul
 github_org: maptime
 maptime:
-  chapter: Chapter name
-  twitter: TwitterHandle
+  chapter: MaptimeIstanbul
+  #twitter: TwitterHandle
   #disqus: YOUR DISQUS USERNAME
 
 gems:
